--- a/styles/style.css
+++ b/styles/style.css
@@ -125,16 +125,63 @@ body {
 
 }
 
+.gg-heart,
+.gg-heart::after {
+    border: 2px solid;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
+    width: 10px;
+    height: 8px;
+    border-bottom: 0
+}
+.gg-heart {
+    box-sizing: border-box;
+    position: relative;
+    transform:
+        translate(
+            calc(-10px / 2 * var(--ggs,1)),
+            calc(-6px / 2 * var(--ggs,1))
+        )
+        rotate(-45deg)
+        scale(var(--ggs,1));
+    display: block
+}
+.gg-heart::after,
+.gg-heart::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute
+}
+.gg-heart::after {
+    right: -9px;
+    transform: rotate(90deg);
+    top: 5px
+}
+.gg-heart::before {
+    width: 11px;
+    height: 11px;
+    border-left: 2px solid;
+    border-bottom: 2px solid;
+    left: -2px;
+    top: 3px
+}
+
+/* ------- header - green round ------- */
 .user-favorite-count {
   border-radius: 10px;
   background: #7DB54F;
   color: #ffffff;
-  font-size: 10px;
-  line-height: 10px;
+  font-size: 20px;
+  line-height: 20px;
   text-align: center;
   text-decoration: none;
+  position: inherit;
+  display: flex;
+  padding: 22px 12px;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /* ------- header - button ------- */
 .navigation-button {
@@ -318,6 +365,29 @@ li.services-item h2 {
   position: relative;
   border: none;
 }
+
+/* ------- interest ------- */
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  inset: 0;
+  display: none;
+  place-items: center;
+}
+
+.modal-inner {
+  background-color: #000;
+  display: block;
+  padding: 20px;
+  overflow: auto;
+  border-radius: 10px;
+  max-height: 90px;
+}
+
+.
+
+
 
 /* ------- mailing ------- */
 
