--- a/5/styles/style.css
+++ b/5/styles/style.css
@@ -21,12 +21,21 @@ body {
     font-size: 22px;
     line-height: 26px;
     color: #333333;
-    background-color: #f2f2f2;
+    background: #ffffff;
+    margin: 0 auto;
+    height: 100%;
 }
 
-.page-container {
-  width: 1200px;
-  margin: 0 auto;
+div.page-container {
+  width: 1280px;
+  padding: 0px 40px;
+  margin: 0;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 100%;
+  background: #f2f2f2;
+  
 }
 
 .visually-hidden {
@@ -43,23 +52,39 @@ body {
 }
 
 /* ------- header ------- */
-
-.main-navigation {
-  background: #ffffff;
-  display: flex;
-	padding: 0 70px;
-	position: relative;
-	z-index: 1;
+.main-header {
+  width: 1200px;
+  height: 64px;
+  background-color: #ffffff;
+  color: #000;
 }
 
-.main-header-logo {
-  width: 140px;
-  height: 70px;
+.main-navigation {  
+  padding: 0px 70px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+.main-header-menu {
+  width: auto;
+  height: 64px;
+  display: block;  
+  /* gap: 30px;  */
+}
+
+a.main-header-logo {
+  fill: none;
+  aspect-ratio: auto 140/70;
+  margin: 0 0 30 0;
 }
 
 .main-header-logo img {
   position: relative;
-  z-index: 1;
+  z-index: 1;  
 }
 
 .navigation-link {
@@ -70,6 +95,8 @@ body {
   color: #000000;
   text-decoration: none;
   text-transform: capitalize;
+
+  
 }
 
 .navigation-link:hover,
@@ -90,16 +117,105 @@ body {
   width: 100%;
 }
 
-.user-favorite-count {
+/* ------- header - icon search ------- */
+.icon-search {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(var(--ggs,1));
+  width: 16px;
+  height: 16px;
+  border: 2px solid;
+  border-radius: 100%;
+  margin-left: -4px;
+  margin-top: -4px;
+  color: #000000;
+}
+
+.icon-search::after {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  border-radius: 3px;
+  width: 2px;
+  height: 8px;
+  background: currentColor;
+  transform: rotate(-45deg);
+  top: 10px;
+  left: 12px
+}
+
+/* ------- header - icon heart ------- */
+.icon-heart{
+
+}
+
+.icon-heart,
+.icon-heart::after {
+    border: 2px solid;
+    color: #000;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
+    width: 10px;
+    height: 8px;
+    border-bottom: 0
+}
+.icon-heart {
+    box-sizing: border-box;
+    position: relative;
+    transform:
+        translate(
+            calc(-10px / 2 * var(--ggs,1)),
+            calc(-6px / 2 * var(--ggs,1))
+        )
+        rotate(-45deg)
+        scale(var(--ggs,1));
+    display: block
+}
+.icon-heart::after,
+.icon-heart::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute
+}
+.icon-heart::after {
+    right: -9px;
+    transform: rotate(90deg);
+    top: 5px
+}
+.icon-heart::before {
+    width: 11px;
+    height: 11px;
+    border-left: 2px solid;
+    border-bottom: 2px solid;
+    left: -2px;
+    top: 3px
+}
+
+/* ------- header - green round ------- */
+/* .navigation-user-count {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
   border-radius: 10px;
   background: #7DB54F;
-  color: #ffffff;
-  font-size: 10px;
-  line-height: 10px;
   text-align: center;
   text-decoration: none;
 }
 
+.icon-heart-text {
+  content: "12";
+  color: #ffffff;
+  text-align: center;
+  font-size: 10px;
+  line-height: 10px;
+} */
+
+
+
+/* ------- header - button ------- */
 .navigation-button {
   background: #756157;
   border-radius: 4px;
@@ -126,17 +242,31 @@ body {
 	color: rgba(255, 255, 255, 0.3);
 }
 
+
 /* ------- hero ------- */
 
-.hero-logo {
-  height: 485px;
-  background-image: url("../images/content-fon/hero-background.jpg");
+.hero {
+  background-image: url("../images/content-fon/mountans.jpg");
+  background-color: #f2f2f2;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-size: contain, cover;
-  background-color: #a426c3;
-  color: black;
   background-position: center bottom;
+  position: relative;  
 }
+
+.hero::after {
+  content: '';
+  width: 1200px;
+  height: 57px;
+  background-image: url("../images/zig-zag.png");  
+}
+
+.hero-logo {
+  display: block;
+  margin: 0 auto;
+  padding-top: 51px;
+}
+
 
 /* ------- advantages ------- */
 
@@ -213,6 +343,7 @@ li.advantages-item-road {
   background-color: rgba(131, 179, 211, 0.20);
 }
 
+
 /* ------- services ------- */
 
 section.services {
@@ -241,7 +372,8 @@ section.services {
 }
 
 li.services-item.services-item-housing p,
-li.services-item.services-item-souvenirs p {
+li.services-item.services-item-souvenirs p,
+li.services-item.services-item-meal p {
   align-self: stretch;
   color: #333;
   font-size: 18px;
@@ -259,10 +391,11 @@ li.services-item h2 {
   height: auto;
 }
 
+.services-subtitul{
+  font-weight: 700;
+}
 
-
-/* ------- services ------- */
-
+/* ------- services - button ------- */
 .search-hotel-button{
   background: #ffffff;
   font-size: 20px;
@@ -277,20 +410,63 @@ li.services-item h2 {
   border: none;
 }
 
+/* ------- interest ------- */
+
+.modal [hidden] {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  inset: 0;
+  display: none;
+  place-items: center;
+}
+
+.modal-inner {
+  background-color: #000;
+  display: block;
+  padding: 20px;
+  overflow: auto;
+  border-radius: 10px;
+  max-height: 90px;
+}
+
+.scroll-lock {
+  [добавить "крестик" как фон]
+}
+
+.visually-hidden {
+
+}
 
 
 /* ------- mailing ------- */
 
-.mailing{
-  background-image: url("../images/content-fon/subscribe.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
+section.mailing {
+
+}
+
+.mailing-subscribe-catalog p, h2 {
   background-size: cover;
-  background-color: #2672c3;
-  color: #fff;
+  color: #000;
+}
+
+
+
+.mailing{
+  background-repeat: no-repeat;
+  color: white;
+  padding: 96px 258px 104px 258px;
+}
+
+.mailing-form-name {
+  box-sizing: border-box;
+  border-radius: 4px 0px;
+  padding: 12px 20px;
+  overflow: hidden;
+  color: #000000;
   text-align: center;
-  padding: 96px 258px 104px;
-  justify-content: center;
+  font-size: 18px;
+  line-height: 24px;
+  position: relative;
 }
 
 .mailing-form-input{
@@ -325,6 +501,22 @@ li.services-item h2 {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
+  color: white;
+}
+
+input#user-email {
+  font-size: 20px;
+  line-height: 36px;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 0 4px 4px 0;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  background: #82b3d3;
+  padding: 8px 50px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 
@@ -356,6 +548,8 @@ li.services-item h2 {
   min-width: 115px;
   min-height: 33px;
 }
+
+
 
 /* ------- catalog-page ------- */
 
@@ -389,7 +583,6 @@ li.services-item h2 {
   font-weight: 700;
   line-height: 78px;
 }
-
 
 /* ------- catalog-page / catalog-results  ------- */
 
@@ -462,7 +655,6 @@ li.services-item h2 {
 	margin: 0 auto;
 	margin-bottom: 156px;
 }
-
 .pagination-list {
 	margin: 0;
 	padding: 0;
@@ -471,7 +663,6 @@ li.services-item h2 {
 	gap: 8px;
 	list-style: none;
 }
-
 .pagination-link {
 	min-width: 60px;
 	height: 60px;
