--- a/5/styles/style.css
+++ b/5/styles/style.css
@@ -5,7 +5,6 @@
   src: url("../fonts/ptsans-400.woff2") format("woff2");
   font-display: swap;
 }
-
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -21,9 +20,11 @@ body {
     font-size: 22px;
     line-height: 26px;
     color: #333333;
-    background: #ffffff;
     margin: 0 auto;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 div.page-container {
@@ -32,10 +33,9 @@ div.page-container {
   margin: 0;
   display: inline-flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   min-height: 100%;
-  background: #f2f2f2;
-  
+  background: #f2f2f2;  
 }
 
 .visually-hidden {
@@ -55,59 +55,48 @@ div.page-container {
 .main-header {
   width: 1200px;
   height: 64px;
-  background-color: #ffffff;
+}
+.main-navigation {
+  display: flex;
+  align-items: flex-start;
+  padding: 0px 70px;
+  background: #ffffff;
   color: #000;
 }
-
-.main-navigation {  
-  padding: 0px 70px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  flex-shrink: 0;
-}
-
-.main-header-menu {
-  width: auto;
-  height: 64px;
-  display: block;  
-  /* gap: 30px;  */
-}
-
-a.main-header-logo {
-  fill: none;
-  aspect-ratio: auto 140/70;
-  margin: 0 0 30 0;
-}
-
-.main-header-logo img {
+a.navigation-logo {
+  display: block;
   position: relative;
-  z-index: 1;  
+  margin-bottom: -6px;
+  margin-right: 28px;
+  z-index: 2;
 }
-
+.navigation-list {
+  display: flex;
+  flex-grow: 1;
+}
+.navigation-item {
+  display: flex;
+  padding: 20px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+}
 .navigation-link {
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
-  text-align: center;
   color: #000000;
   text-decoration: none;
-  text-transform: capitalize;
-
-  
+  text-transform: capitalize;  
 }
-
 .navigation-link:hover,
 .navigation-link:focus {
 	color: rgba(0, 0, 0, 0.6);
 }
-
 .navigation-link:active {
 	color: rgba(0, 0, 0, 0.3);
 }
-
 .navigation-link-current {
   box-sizing: border-box;
   border-style: solid;
@@ -116,8 +105,11 @@ a.main-header-logo {
   position: relative;
   width: 100%;
 }
+.navigation-list-user {
 
-/* ------- header - icon search ------- */
+}
+
+/* ------- header - icon search -------
 .icon-search {
   box-sizing: border-box;
   position: relative;
@@ -147,7 +139,7 @@ a.main-header-logo {
 }
 
 /* ------- header - icon heart ------- */
-.icon-heart{
+/* .icon-heart{
 
 }
 
@@ -192,10 +184,10 @@ a.main-header-logo {
     border-bottom: 2px solid;
     left: -2px;
     top: 3px
-}
+} */ */
 
 /* ------- header - green round ------- */
-/* .navigation-user-count {
+.navigation-link-user-statistics {
   width: 20px;
   height: 20px;
   flex-shrink: 0;
@@ -211,7 +203,7 @@ a.main-header-logo {
   text-align: center;
   font-size: 10px;
   line-height: 10px;
-} */
+}
 
 
 
@@ -246,27 +238,21 @@ a.main-header-logo {
 /* ------- hero ------- */
 
 .hero {
-  background-image: url("../images/content-fon/mountans.jpg");
-  background-color: #f2f2f2;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center bottom;
-  position: relative;  
-}
-
-.hero::after {
-  content: '';
   width: 1200px;
-  height: 57px;
-  background-image: url("../images/zig-zag.png");  
+  height: 485px;
+  background-image: url(../images/zig-zag.png), url(../images/content-fon/mountans.jpg);
+  background-repeat: no-repeat;
+  background-size: contain, cover;
+  background-color: #82B3D3;
+  background-position: center bottom;
 }
 
 .hero-logo {
   display: block;
   margin: 0 auto;
+  position: sticky;
   padding-top: 51px;
 }
-
 
 /* ------- advantages ------- */
 
@@ -646,6 +632,22 @@ input#user-email {
 .select-type-list{
   list-style: none;
 }
+
+.catalog-apply {
+  font: inherit;
+  font-weight: 700;
+  color: #ffffff;
+
+
+}
+.catalog-throw-off {
+  background-color: transparent;
+  font: inherit;
+  font-weight: 700;
+  color: #ffffff;
+  
+}
+
 
 
 /* ------- pagination  ------- */
