--- a/styles/style.css
+++ b/styles/style.css
@@ -13,29 +13,40 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-    font-family: "PT Sans", sans-serif;
+    /* Texts/Text basic */
+    font-family: "PT Sans", sans-serif; 
     font-weight: 400;
     font-style: normal;
     font-size: 22px;
     line-height: 26px;
-    color: #333333;
-    margin: 0 auto;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+    width: auto;
+    min-height: 100%;
+    color: #000;
+    background-color: #f2f2f2;
+
+    background-repeat: no-repeat;
+    background-position: top center;
 }
 
 div.page-container {
-  width: 1280px;
-  padding: 0px 40px;
-  margin: 0;
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100%;
-  background: #f2f2f2;  
+  width: 1200px;
+  height: 100%;
+  background: rgba(242, 242, 242, 0.80);
+
+display: inline-flex;
+padding: 0px 40px;
+background: #F2F2F2;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+
+  flex-shrink: 0;
 }
 
 .visually-hidden {
@@ -52,34 +63,60 @@ div.page-container {
 }
 
 /* ------- header ------- */
-.main-header {
+header {
+  min-height: 100%;
+  display: block;
+}
+
+hearder.page-header {
+  width: auto;
+  height: auto;
+  background: #83B3D31F;  
+  display: block;
+}
+
+.page-header-logo {
+  display: flex;
   width: 1200px;
   height: 64px;
+  padding: 0px 70px;
+  background: #FFF;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0 30px 0 0;
+  position: relative;
+  z-index: -1;
 }
+
+.logo {
+  min-width: 140px;
+  min-height: 70px;
+  background-image: url("../images/brand-sedona.svg");  
+}
+
+
+/* ------- navigation / header ------- */
+
+navigation {
+  height: 100%;
+}
+
 .main-navigation {
   display: flex;
-  align-items: flex-start;
-  padding: 0px 70px;
-  background: #ffffff;
-  color: #000;
-}
-a.navigation-logo {
-  display: block;
-  position: relative;
-  margin-bottom: -6px;
-  margin-right: 28px;
-  z-index: 2;
+  justify-content: space-between;
 }
 .navigation-list {
+  height: 64px;
+  list-style: none;
+  margin: 0;
+  padding: 0px 70px;
   display: flex;
-  flex-grow: 1;
+  flex-grow: 0;
 }
 .navigation-item {
-  display: flex;
   padding: 20px 16px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: flex; 
+  align-items: center;  
   align-self: stretch;
 }
 .navigation-link {
@@ -88,152 +125,182 @@ a.navigation-logo {
   font-weight: 700;
   color: #000000;
   text-decoration: none;
-  text-transform: capitalize;  
-}
-.navigation-link:hover,
-.navigation-link:focus {
-	color: rgba(0, 0, 0, 0.6);
-}
-.navigation-link:active {
-	color: rgba(0, 0, 0, 0.3);
+  text-transform: capitalize;
+  margin: 0;
+  padding: 0;
+  margin-right: auto;
+  align-self: stretch;
 }
 .navigation-link-current {
   box-sizing: border-box;
   border-style: solid;
   border-color: #756257;
   border-width: 0 0 2px 0;
-  position: relative;
+  margin-bottom: -20px;
   width: 100%;
+  position: relative;
 }
 .navigation-list-user {
-
+  height: 64px;
+  list-style: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  position: static;
+}
+.navigation-item-user {
+  display: list-item;
+  text-align: center;
+  align-items: center;  
+  align-self: stretch;
+}
+.navigation-link-user {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-grow: 1;
 }
 
-/* ------- header - icon search -------
+/* ------- header / search ------- */
 .icon-search {
-  box-sizing: border-box;
+  /* width: auto;
+  height: auto;
+  background-image: url("../images/icons/search.svg");
   position: relative;
-  display: block;
-  transform: scale(var(--ggs,1));
-  width: 16px;
-  height: 16px;
-  border: 2px solid;
-  border-radius: 100%;
-  margin-left: -4px;
-  margin-top: -4px;
-  color: #000000;
+  padding: 22px 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+
+    width: 21px; height: 20px;
+    background: url('css_sprites.png') -10px -10px;
 }
 
-.icon-search::after {
-  content: "";
-  display: block;
-  box-sizing: border-box;
-  position: absolute;
-  border-radius: 3px;
-  width: 2px;
-  height: 8px;
-  background: currentColor;
-  transform: rotate(-45deg);
-  top: 10px;
-  left: 12px
-}
-
-/* ------- header - icon heart ------- */
-/* .icon-heart{
 
 }
 
-.icon-heart,
-.icon-heart::after {
-    border: 2px solid;
-    color: #000;
-    border-top-left-radius: 100px;
-    border-top-right-radius: 100px;
-    width: 10px;
-    height: 8px;
-    border-bottom: 0
+/* ------- header / heart ------- */
+.icon-search {
+  width: auto;
+  height: auto;
+  background-image: url("../images/icons/heart.svg");
+  position: relative;
+  padding: 22px 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.icon-heart {
-    box-sizing: border-box;
-    position: relative;
-    transform:
-        translate(
-            calc(-10px / 2 * var(--ggs,1)),
-            calc(-6px / 2 * var(--ggs,1))
-        )
-        rotate(-45deg)
-        scale(var(--ggs,1));
-    display: block
-}
-.icon-heart::after,
-.icon-heart::before {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute
-}
-.icon-heart::after {
-    right: -9px;
-    transform: rotate(90deg);
-    top: 5px
-}
-.icon-heart::before {
-    width: 11px;
-    height: 11px;
-    border-left: 2px solid;
-    border-bottom: 2px solid;
-    left: -2px;
-    top: 3px
-} */ */
 
-/* ------- header - green round ------- */
+/* ------- header / green round ------- */
 .navigation-link-user-statistics {
   width: 20px;
   height: 20px;
-  flex-shrink: 0;
   border-radius: 10px;
   background: #7DB54F;
   text-align: center;
   text-decoration: none;
+  top: 11px;
+  left: 20px;
+  radius: 10px;
+  display: flex;
+  flex-direction: column-row;
+  flex-shrink: 2;
+  position: relative;
 }
-
 .icon-heart-text {
   content: "12";
   color: #ffffff;
   text-align: center;
-  font-size: 10px;
+  font-size: 11px;
   line-height: 10px;
 }
 
-
-
-/* ------- header - button ------- */
+/* ------- header / button ------- */
 .navigation-button {
+  content: "Хочу сюда!";
+  width: 160px;  
+  height: 36px;
   background: #756157;
   border-radius: 4px;
-  padding: 8px 50px;
-  min-width: 160px;
-  justify-content: center;
+  border: none;
+  margin-right: 20px;
+  display: inline-flex;
   align-items: center;
+  justify-self: center;
+  align-content: center;
+
+}
+.navigation-want-come-here {
   color: #fff;
   font-size: 16px;
   line-height: 20px;
   font-weight: 700;
-  text-align: center;
+  padding: 8px 50px;
   text-transform: uppercase;
   text-decoration: none;
 }
 
-.navigation-button:hover,
-.navigation-button:focus {
-	background: #615048;
+.navigation-button:disabled {
+	background-color: #E5E5E5;
+}
+.navigation-want-come-here:disabled {
+  color: #FFFFFF;
 }
 
 .navigation-button:active {
-	background-color: #756157;
-	color: rgba(255, 255, 255, 0.3);
+	color: #756157;
+  color: #FFFFFF4D;
 }
 
+.navigation-button:active {
+	color: #756157;
+}
+.navigation-want-come-here:active {
+  color: #FFFFFF4D;
+}
+
+.navigation-button:focus {
+	background-color: #615048;
+}
+.navigation-want-come-here:focus {
+  color: #FFFFFF;
+}
+
+.navigation-button:hover {
+	background-color: #615048;
+}
+.navigation-want-come-here:hover {
+  color: #FFFFFF;
+}
+
+.navigation-button:default {
+	background-color: #615048;
+}
+.navigation-want-come-here:default {
+	background-color: #756157;
+}
+
+.navigation-button:default {
+  color: #FFFFFF;
+} 
+
+/* ------- main ------- */
+
+main {
+  min-height: 100%;
+  flex-grow: 1;
+}
+
+.main {
+  height: auto;
+  width: auto;
+  color: #FFF;
+  background-color: #83B3D31F;
+  display: block;  
+}
 
 /* ------- hero ------- */
 
@@ -245,6 +312,8 @@ a.navigation-logo {
   background-size: contain, cover;
   background-color: #82B3D3;
   background-position: center bottom;
+  text-align: center;
+  display: block;
 }
 
 .hero-logo {
@@ -254,14 +323,23 @@ a.navigation-logo {
   padding-top: 51px;
 }
 
+<!-- h1, h2, h3, img, p, a, ul, li, form, hgroup, div, {
+  height: 100%;
+} -->
+
 /* ------- advantages ------- */
 
-section.advantages {
-  background-color: #ffffff;
+section {
+  height: 100%;
 }
 
-li.advantages-item-infrastructure {
-  background-color: #82B3D3;
+section.advantages {
+  width: 1200px;
+  max-height: 385px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .advantages-title {
@@ -271,6 +349,92 @@ li.advantages-item-infrastructure {
   text-transform: uppercase;
 }
 
+.advantages-title-cards h2 {
+  color: #ffffff;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+  padding: 69px 0px;
+  flex-direction: column;
+  justify-content: center;
+  width: 620;
+  height: 72px;
+}
+
+.advantages-text p {
+  text-align: center;
+}
+
+.advantages-reasons {
+  width: 1200px;
+  height: 385px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.advantages-item {
+  display: flex;
+  width: 400px;
+  height: 385px;
+  padding: 103px 85px;
+  background: var(--background-basic-3, #82B3D3);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 400px;
+  padding: 103px 85px;
+  box-sizing: border-box;
+
+}
+
+.advantages-title-cards h2 {
+  color: #000;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+
+
+
+
+}
+
+/* * {
+  display: flex;
+  width: 400px;
+  height: 385px;
+  padding: 103px 85px;
+  background: #82B3D3;
+  flex-direction: column;
+  justify-content: center;
+  color: #FFF;
+  text-transform: uppercase;
+  width: 175px;
+  color: var(--texts-background-deafault, #FFF);
+  text-align: center;
+  /* Headings/Heading 3 */
+  font-family: PT Sans;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 116.667% */
+  text-transform: uppercase;
+
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+  margin: 0;
+} */
+
+li.advantages-item-infrastructure {
+  background-color: #82B3D3;
+}
+
 .advantages-text {
   color: #333;
 }
@@ -278,10 +442,10 @@ li.advantages-item-infrastructure {
 h3.advantages-title-cards {
   color: #ffffff;
   font-size: 24px;
-  font-style: normal;
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 p.advantages-title-cards-text{
@@ -337,6 +501,7 @@ section.services {
   padding: 64px 0px;
   align-items: center;
   align-self: stretch;
+  list-style: none;
 }
 
 .services h2 {
@@ -355,6 +520,7 @@ section.services {
   color: #000;
   font-size: 24px;
   line-height: 28px;
+  text-align: center;
 }
 
 li.services-item.services-item-housing p,
@@ -364,6 +530,7 @@ li.services-item.services-item-meal p {
   color: #333;
   font-size: 18px;
   line-height: 21px;
+  text-align: center;
 }
 
 li.services-item h2 {
@@ -398,6 +565,12 @@ li.services-item h2 {
 
 /* ------- interest ------- */
 
+.interest {
+  width: Hug (1,200px)
+  height: Hug (406px)
+  padding: 96px, 304px, 96px, 304px;
+}
+
 .modal [hidden] {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
@@ -426,21 +599,52 @@ li.services-item h2 {
 
 /* ------- mailing ------- */
 
-section.mailing {
+.mailing {
+  display: flex;
+  padding: 96px 258px 104px 258px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mailing-subscribe {
+  background-image:  url("../images/content-fon/subscribe.jpg");
+  background-color: #534d4d;
+  color: #333333;
+  background-size: cover;
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+section.mailing.mailing-subscribe {
+  color: #333333;
+}
+
+
+.mailing-title {
+  background-size: cover;
+  color: white;
+  font-size: 30px;
+  line-height: 36px;  
+  text-transform: uppercase;
+  color: white;
+}
+
+.mailing-title h2 {
+  display: flex;
+  padding: 96px 258px 104px 258px;
+  background: url(<path-to-image>), lightgray -0.677px 0px / 100.113% 193.478% no-repeat;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 
 }
 
 .mailing-subscribe-catalog p, h2 {
   background-size: cover;
   color: #000;
-}
-
-
-
-.mailing{
-  background-repeat: no-repeat;
-  color: white;
-  padding: 96px 258px 104px 258px;
 }
 
 .mailing-form-name {
@@ -477,18 +681,6 @@ section.mailing {
   position: relative;
 }
 
-.mailing-subscribe{
-  background-image:  url("../images/content-fon/subscribe.jpg");
-  background-color: #fff;
-  background-size: cover;
-}
-
-.mailing-title{
-  font-size: 30px;
-  line-height: 36px;
-  text-transform: uppercase;
-  color: white;
-}
 
 input#user-email {
   font-size: 20px;
@@ -508,38 +700,135 @@ input#user-email {
 
 /* ------- footer ------- */
 
-.main-footer{
-  box-sizing: border-box;
-  background: #fff;
-  min-height: 120px;
-  position: relative;
-  list-style: none;
-  padding: 70px 40px 70px 30px;
-  margin: 0;
+footer {
+  min-height: 100%;
 }
 
-.text-phone{
-  color: black;
+.main-footer{
+  display: flex;
+  width: 1200px;
+  padding: 40px 70px 30px;
+  justify-content: center;
+  height: 120px;  
+  align-items: center;
+  background-color: #fff;
+}
+
+.footer-social-list {
+  display: flex;
+  width: 142px;
+  height: 40px;
+  align-items: center;
+  flex-shrink: 0;  
+}
+
+.footer-social-item {
+  list-style: none;
+  width: 1060px;
+  display: flex;
+  padding: 0px 10px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 0;
+  align-self: stretch;
+}
+
+.footer-contacts-address {
+  display: flex;
+  height: 50px;
+  padding: 5px 194px 5px 195px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+}
+
+a[href^='tel']::before {
+  content: '+7(812)812-12-12';
+}
+
+.link-vk {
+  background-image: url("../images/icons/vk-focus.svg");
+  width: 24px;
+  height: 14px;
+}
+
+.link-vk:link {
+  color: #83B3D3;
+}
+
+.link-vk:visited {
+  color: #68A2CA;
+}
+
+.link-vk:focus {
+  color: #68A2CA;
+}
+
+.link-vk:active {
+  color: #83B3D3;
+}
+
+
+
+
+
+.link-vk:hover {
+  color: #68A2CA;
+}
+  
+.link-telegram {
+  background-image: url("../images/icons/telegram-focus.svg");
+  width: 18px;
+  height: 16px;
+}
+  
+.link-youtube {
+  background-image: url("../images/icons/youtube-focus.svg");
+  width: 22px;
+  height: 17px;
+}
+  
+.link-phone {
   font-size: 40px;
   line-height: 40px;
   text-transform: uppercase;
   text-decoration: none;
-  box-sizing: border-box;
-  text-align: center;
-  min-width: 331px;
-  min-height: 40px;
+  transform: inherit;
+  font-style: normal;
+  color: #000;
 }
 
-.logo-html {
-  min-width: 115px;
-  min-height: 33px;
+.link-html {  
+  width: 115px;
+  height: 33px;
+  flex-shrink: 0;  
+  background-image: url("../images/brand-htmlacademy.svg");
 }
 
+.modal {
+  
+}
 
 
 /* ------- catalog-page ------- */
 
 /* ------- catalog-page / search  ------- */
+
+.main-inner {
+
+}
+
+.main-inner-search {
+  width: 1200px;
+  height: 412px;
+  display: flex;
+  padding: 70px 35px 70px 70px;
+  background: #F2F2F2;  
+  flex-direction: column;
+  align-items: flex-start;
+  top: 64px;
+}
 
 .search {
   list-style: none;
@@ -554,13 +843,16 @@ input#user-email {
 
 /* ------- catalog-page / catalog-filter  */
 
-.search {
-  background-image: url('../images/content-fon/filter');
+section.search {
+  background-image: url("../images/content-fon/filter.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   background-color: #2672c3;
   color: #000;
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .search-title{
@@ -569,6 +861,54 @@ input#user-email {
   font-weight: 700;
   line-height: 78px;
 }
+
+.breadcrumbs-list {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: auto;
+  list-style: none;
+  color: #fff;
+}
+
+.breadcrumbs-button {
+  display: flex;
+  width: auto;
+  height: auto;
+  flex-wrap: nowrap;
+}
+
+.breadcrumbs-icon-home::before {
+  content: url("../images/icons/home2.svg");
+  width: 12px;
+  height: 12px;
+  flex-shrink: 1;
+  padding-bottom: 0px;
+  width: 13px;
+  height: 15px;
+  padding: 0px 3px 0px 5px;
+  background-color: transparent;
+
+}
+
+.breadcrumbs-icon-arrow-bigger::before {
+  content: url("../images/icons/more.svg");
+  width: 6.393px;
+  height: 9.938px;
+  flex-shrink: 1;
+  right: 10px;
+  padding: 0px 5px 0px 5px;
+  padding-bottom: 0px;
+  background-color: transparent;
+}
+
+.breadcrumbs-link {
+
+}
+
+
+
+
 
 /* ------- catalog-page / catalog-results  ------- */
 
