--- a/styles/style.css
+++ b/styles/style.css
@@ -39,15 +39,10 @@ body {
 }
 
 div.page-container {
-  width: 1200px;
+  width: 1280px;
   height: 100%;
   background: rgba(242, 242, 242, 0.80);
   padding: 0px 40px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
 }
 
 .visually-hidden {
@@ -68,30 +63,27 @@ div.page-container {
 
 header {
   min-height: 100%;
-  flex-grow: 1;
 }
 .page-header {
-  width: 1200;
   height: 64px;
+
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: capitalize;
+
   background: #ffffff;
-
   padding: 0px 70px;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-shrink: 0;
 }
 
 .page-index {
-  display: flex;
   height: 64px;
+
+  display: flex;
   align-items: flex-start;
 }
 
 /* ------- header / logo ------- */
-
-}
 .logo {
   width: 140px;
   height: 70px;
@@ -610,63 +602,68 @@ li.services-item h2 {
 /* ------- mailing ------- */
 
 .mailing {
-  display: flex;
+  max-width: 100%;
   padding: 96px 258px 104px 258px;
+  background-image:  url("../images/content-fon/subscribe.jpg");
+  background-color: #3F5E72;
+
+  background-size: cover;
+
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
-.mailing-subscribe {
-  background-image:  url("../images/content-fon/subscribe.jpg");
-  background-color: #534d4d;
-  color: #333333;
-  background-size: cover;
-  max-width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-section.mailing.mailing-subscribe {
-  color: #333333;
-}
-
-
-.mailing-title {
-  background-size: cover;
+h2.mailing-title {
+  width: 404px;
+  height: 36.35px;
   color: white;
+  font-weight: 700;
+  background-size: cover;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  color: white;
 }
+form.mailing-form {
+  width: 684px;
+  height: 215px;
 
-.mailing-title h2 {
   display: flex;
-  padding: 96px 258px 104px 258px;
-  background: url(<path-to-image>), lightgray -0.677px 0px / 100.113% 193.478% no-repeat;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  gap: 10px;
-
 }
+
+.mailing-form p {
+  max-width: 475px;
+  text-align: center;
+  color: white;
+  padding-b: 54px;
+}
+
+
 
 .mailing-subscribe-catalog p, h2 {
   background-size: cover;
-  color: #000;
+  backgruond-top: 20px;
+  backgruond-top: 54px;
+  color: white;
 }
 
-.mailing-form-name {
+input#user-email-button {
   box-sizing: border-box;
   border-radius: 4px 0px;
   padding: 12px 20px;
-  overflow: hidden;
-  color: #000000;
-  text-align: center;
+
+
+  position: relative;
+}
+
+div#placeholder {
+  color: white;
+  text-align: left;
   font-size: 18px;
   line-height: 24px;
-  position: relative;
+
 }
 
 .mailing-form-input{
